Fix side bar overflow problem

--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     border-radius: 5px;
     padding: 15px;
+    overflow: scroll;
 }
 
 .indv-ticker-container {
@@ -24,6 +25,7 @@
     border-radius: 10px;
     padding: 15px;
     background: #e8e8e8;
+    min-height: 30px;
 }
 
 .indv-ticker-container:hover {
